# leptix

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: lib.rs
crates/primitives/src/components/: accordion.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  checkbox.rs  collapsible.rs  collection.rs  dialog.rs  dismissable_layer.rs  label.rs  mod.rs  popper.rs  presence.rs  primitive.rs  progress.rs  radio.rs  radio_group.rs  roving_focus.rs  scroll_area.rs  separator.rs  slider.rs  slot.rs  switch.rs  tabs.rs  toggle.rs  toggle_group.rs  toolbar.rs
crates/primitives/src/util/: create_controllable_signal.rs  create_focus_guards.rs  create_id.rs  create_previous.rs  create_state_machine.rs  mod.rs
examples/csr-with-tailwind/: .gitignore  Cargo.toml  README.md  index.html  package.json  tailwind.config.js
examples/csr-with-tailwind/src/: main.rs
examples/csr-with-tailwind/styles/: input.css
examples/ssr-with-actix-tailwind/: Cargo.toml  README.md  package-lock.json  tailwind.config.js
examples/ssr-with-actix-tailwind/src/: app.rs  lib.rs  main.rs  primitives.rs
examples/ssr-with-axum-tailwind/: .gitignore  Cargo.toml  README.md  package-lock.json  tailwind.config.js
examples/ssr-with-axum-tailwind/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  primitives.rs
examples/ssr-with-islands-actix-tailwind/: .gitignore  Cargo.toml  README.md  package.json
examples/ssr-with-islands-actix-tailwind/src/: app.rs  lib.rs  main.rs  primitives.rs
src/: lib.rs
src/components/: accordion.rs  aspect_ratio.rs  avatar.rs  checkbox.rs  collapsible.rs  collection.rs  dialog.rs  label.rs  mod.rs  presence.rs  primitive.rs  progress.rs  radio.rs  radio_group.rs  roving_focus.rs  scroll_area.rs  separator.rs  slider.rs  switch.rs  tabs.rs  toggle.rs  toggle_group.rs  toolbar.rs
src/util/: create_controllable_signal.rs  create_id.rs  create_previous.rs  create_state_machine.rs  mod.rs
