[package]
name = "leptos_primitives"
version = "0.1.0"
edition = "2021"
exclude = ["/examples", "/assets", "CONTRIBUTING.md", "rustfmt.toml"]

[dependencies]
derive_more = "0.99.17"
itertools = "0.12.1"
leptos = { version = "0.6", features = ["nightly"] }
leptos-use = "0.10.4"
nanoid = "0.4.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3.65", features = ["CustomEventInit", "EventInit"] }
