[package]
name = "leptix_primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.6"
leptos-use = "0.10.4"
derive_more = "0.99.17"
nanoid = "0.4.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
itertools = "0.12.1"
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3.65", features = ["CustomEventInit", "EventInit"] }
