[package]
name = "leptix_primitives"
version = "0.2.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/leptix/leptix"
description = "Accessible and unstyled components for Leptos"
license = "MIT"
homepage = "https://upbolt.github.io/leptos_primitives"
authors = ["Upbolt"]
keywords = ["leptos", "components", "radix-ui", "accessibility", "unstyled"]
exclude = ["README.md", "assets/*"]
categories = ["accessibility", "web-programming"]

[dependencies]
leptos = "0.7.0-beta"
# leptos = { git = "https://github.com/leptos-rs/leptos" }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use", rev = "49f89bc" }
# leptos-use = { path = "D:/Projects/leptos-ecosystem/leptos-use" }
derive_more = { version = "1.0", features = ["full"] }
nanoid = "0.4.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CustomEventInit", "EventInit"] }

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr", "leptos-use/ssr"]
hydrate = ["leptos/hydrate"]
nightly = ["leptos/nightly"]
